[gd_scene load_steps=3 format=3 uid="uid://b4kamfmjbca3k"]

[ext_resource type="Script" path="res://addons/object_pool/pool_dock.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ciqidpgerjqkm" path="res://addons/object_pool/PathLineEdit.tscn" id="2_gxn0e"]

[node name="Pool" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 165.0
offset_bottom = 33.0

[node name="EnumPathInput" type="LineEdit" parent="HBoxContainer"]
offset_right = 70.0
offset_bottom = 33.0
size_flags_horizontal = 3

[node name="AddEnumButton" type="Button" parent="HBoxContainer"]
offset_left = 74.0
offset_right = 165.0
offset_bottom = 33.0
text = "Add enum"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshButton" type="Button" parent="."]
offset_top = 37.0
offset_right = 165.0
offset_bottom = 66.0
text = "Refresh"

[node name="EnumTree" type="Tree" parent="."]
offset_top = 70.0
offset_right = 165.0
offset_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="EnumItemInspector" type="VBoxContainer" parent="."]
offset_top = 74.0
offset_right = 165.0
offset_bottom = 100.0

[node name="EnumItemLabel" type="Label" parent="EnumItemInspector"]
offset_right = 165.0
offset_bottom = 26.0
text = "Enum Type"

[node name="EnumValueInspector" type="VBoxContainer" parent="."]
offset_top = 104.0
offset_right = 165.0
offset_bottom = 167.0

[node name="EnumValueLabel" type="Label" parent="EnumValueInspector"]
offset_right = 165.0
offset_bottom = 26.0
text = "Enum value"

[node name="HBoxContainer" type="HBoxContainer" parent="EnumValueInspector"]
offset_top = 30.0
offset_right = 165.0
offset_bottom = 63.0

[node name="EnumValueSceneLabel" type="Label" parent="EnumValueInspector/HBoxContainer"]
offset_top = 3.0
offset_right = 45.0
offset_bottom = 29.0
text = "Scene"

[node name="EnumValueScene" parent="EnumValueInspector/HBoxContainer" instance=ExtResource( "2_gxn0e" )]
modulate = Color(1, 0, 0, 1)
offset_left = 49.0
offset_right = 165.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16

[connection signal="pressed" from="HBoxContainer/AddEnumButton" to="." method="_on_AddEnumButton_pressed"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="button_pressed" from="EnumTree" to="." method="_on_EnumTree_button_pressed"]
[connection signal="item_selected" from="EnumTree" to="." method="_on_EnumTree_item_selected"]
[connection signal="text_changed" from="EnumValueInspector/HBoxContainer/EnumValueScene" to="." method="_on_EnumValueScene_text_changed"]
